refactor(src): restructure folder structure for the test files and others to be in src/ path

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "license": "MIT",
     "scripts": {
         "test": "./scripts/test.sh",
-        "clean-reports": "./scripts/clean-reports.sh",
-        "combine-reports": "./scripts/combine-reports.sh",
+        "clean-reports": "./scripts/clean-results.sh",
+        "combine-reports": "./scripts/combine-results.sh",
         "pretest": "yarn clean-reports"
     },
     "devDependencies": {
