ci(scripts and configs): improve ci test run
browser chrome, disable video, fix combine test-results, and add makefile entry for ci

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
     container_name: cypress-test
     environment:
       - CYPRESS_baseUrl=https://example.cypress.io/
+      - CYPRESS_video=false
     working_dir: /app
     volumes:
       - .:/app
