ci(scripts): use params for ci tests
also headless testing in ci

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,4 +22,4 @@ services:
       - .:/app
       - nodemodules:/app/node_modules
       - cache:/root/.cache/
-    command: ["sh", "-c", "yarn && yarn test"]
+    command: ["sh", "-c", "yarn && yarn test-ci"]
