ci(workflows): use docker-compose build instead of makefile

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Build docker image
-        run: make build
+        run: docker-compose build test-ci
