ci(workflows, docker-compose.yaml): add docker caching between build and tests

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ volumes:
 
 services:
   test-ci:
-    image: cypress-kit
+    image: cypress-kit:latest
     build:
         context: .
         args:
