--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,8 @@ jobs:
 
       - name: Build docker image
         run: |
-          docker build -t cypress-kit:$GITHUB_SHA
+          docker-compose build test-ci
+          docker tag cypress-kit:latest cypress-kit:$GITHUB_SHA
           mkdir -p docker-images
           docker save cypress-kit:$GITHUB_SHA > docker-images/cypress-kit.tar
 
