Revert "ci(workflows): fix docker build"
This reverts commit 4db4d6142017e441b579a1d4584437380735f6d0.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,7 @@ jobs:
 
       - name: Build docker image
         run: |
-          docker-compose build test-ci
-          docker tag cypress-kit:latest cypress-kit:$GITHUB_SHA
+          docker build -t cypress-kit:$GITHUB_SHA
           mkdir -p docker-images
           docker save cypress-kit:$GITHUB_SHA > docker-images/cypress-kit.tar
 
