ci(workflows): combine build and test jobs together to save build time

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,20 +9,13 @@ on:
   workflow_dispatch:
 
 jobs:
-  Build:
+  Build-Test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
       - name: Build docker image
         run: docker-compose build test-ci
-
-  Test-CI:
-    needs: Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
 
       - name: Run example tests
         run: make test-ci
