test(test pages): add github login page example test
- this is an example to create a page in a class with different selectors and its actions

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "scripts": {
         "clean-results": "./scripts/clean-results.sh",
         "combine-junit-results": "./scripts/combine-junit-results.sh",
-        "lint": "eslint src",
+        "fix-lint": "./scripts/lint.sh --fix",
+        "lint": "./scripts/lint.sh",
         "pretest": "yarn lint && yarn clean-results",
         "test": "./scripts/test.sh",
         "test-ci": "./scripts/test-ci.sh",
