--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Build docker image
         run: docker-compose build test-ci
 
+      - name: Run linters
+        run: make lint
+
       - name: Run example tests
         run: make test-ci
 
