ci(workflows/main.yaml): add missing step yarn install before running linters
- this has to be done otherwise the yarn lint step is not able to find the required modules for
linters

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Build docker image
         run: docker-compose build test-ci
 
+      - name: Install packages
+        run: yarn install
+
       - name: Run linters
         run: make lint
 
