--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,8 +6,8 @@ extends:
   - 'plugin:@typescript-eslint/recommended'
 parser: '@typescript-eslint/parser'
 parserOptions:
-  ecmaVersion: 12
-  sourceType: module
+  project:
+    - './tsconfig.json'
 plugins:
   - '@typescript-eslint'
 rules:
